Removing peak consumption code

--- a/3-energy-agent-collaborator/3.2_energy_agent_invocation.ipynb
+++ b/3-energy-agent-collaborator/3.2_energy_agent_invocation.ipynb
@@ -170,8 +170,7 @@
     "%store -r\n",
     "print(\"Supervisor agent name:\", energy_agent_name, \"id:\", energy_agent_id)\n",
     "print(\"Forecast agent name:\", forecast_agent_name, \"id:\", forecast_agent_id, \"alias_id:\", forecast_agent_alias_id)\n",
-    "print(\"Solar Panel agent name:\", solar_agent_name, \"id:\", solar_agent_id, \"alias_id:\", solar_agent_alias_id)\n",
-    "print(\"Peak Management agent name:\", peak_agent_name, \"id:\", peak_agent_id, \"alias_id:\", peak_agent_alias_id)"
+    "print(\"Solar Panel agent name:\", solar_agent_name, \"id:\", solar_agent_id, \"alias_id:\", solar_agent_alias_id)"
    ]
   },
   {
@@ -200,7 +199,6 @@
     "multi_agent_names = {\n",
     "    f\"{forecast_agent_id}/{forecast_agent_alias_id}\": forecast_agent_name,\n",
     "    f\"{solar_agent_id}/{solar_agent_alias_id}\": solar_agent_name,\n",
-    "    f\"{peak_agent_id}/{peak_agent_alias_id}\": peak_agent_name,\n",
     "    f\"{energy_agent_id}/{energy_agent_alias_id}\": energy_agent_name\n",
     "}"
    ]
@@ -452,92 +450,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cf7502f",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "#### Lab 3 - Peak Load Manager Agent"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c169c2c",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "session_id:str = str(uuid.uuid1())\n",
-    "\n",
-    "response = agents.invoke(\n",
-    "    \"What's causing my peak load? My id is 2.\", \n",
-    "    energy_agent_id,\n",
-    "    session_id=session_id,\n",
-    "    enable_trace=True,\n",
-    "    multi_agent_names=multi_agent_names\n",
-    ")\n",
-    "print(\"====================\")\n",
-    "print(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48dc09d1-4a7f-4409-8602-690e6a8e5117",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "time.sleep(60)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3234621c",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "session_id:str = str(uuid.uuid1())\n",
-    "\n",
-    "response = agents.invoke(\n",
-    "    \"Is it possible to optimize my consumption? My id is 1\", \n",
-    "    energy_agent_id,\n",
-    "    session_id=session_id,\n",
-    "    enable_trace=True,\n",
-    "    multi_agent_names=multi_agent_names\n",
-    ")\n",
-    "print(\"====================\")\n",
-    "print(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38fe99bf-6f8a-4eb3-a2dd-4ae8c55ca7b5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "time.sleep(60)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "773c5ef7",
    "metadata": {},
    "source": [
-    "#### Lab 4 - Multiple agents in parallel\n",
+    "#### Lab 3 - Multiple agents in parallel\n",
     "Finally, let's submit a query which will result in our supervisor agent requiring responses from multiple agents in parallel. This shows the behaviour of a supervisor agent using supervisor mode rather than router mode as we have seen in the previous examples."
    ]
   },
