--- a/4-clean-up/4_conclusion_cleanup.ipynb
+++ b/4-clean-up/4_conclusion_cleanup.ipynb
@@ -223,20 +223,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "550bf448-e761-4b17-8bb4-1d29394ea733",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "agents.delete_agent(peak_agent_name)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "df79e349",
    "metadata": {
@@ -261,7 +247,7 @@
    },
    "outputs": [],
    "source": [
-    "forecast_lambda_name, forecast_dynamodb, solar_lambda_name, solar_dynamodb, peak_lambda_name, peak_dynamodb"
+    "forecast_lambda_name, forecast_dynamodb, solar_lambda_name, solar_dynamodb"
    ]
   },
   {
@@ -290,20 +276,6 @@
    "outputs": [],
    "source": [
     "agents.delete_lambda(solar_lambda_name, dynamoDB_table=solar_dynamodb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f73f3b63",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "agents.delete_lambda(peak_lambda_name, dynamoDB_table=peak_dynamodb)"
    ]
   },
   {
@@ -360,16 +332,6 @@
    "outputs": [],
    "source": [
     "kb.delete_kb(solar_kb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be9a4f58",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kb.delete_kb(peak_kb)"
    ]
   },
   {
