--- a/3-energy-agent-collaborator/3.1_energy_agent_collaborator.ipynb
+++ b/3-energy-agent-collaborator/3.1_energy_agent_collaborator.ipynb
@@ -215,13 +215,12 @@
     "    energy_agent_name,\n",
     "    \"\"\"\n",
     "        You are a energy helper bot. \n",
-    "        You can help customers with operations related with their energy, like consumption, forecast, peak usage, etc. \n",
+    "        You can help customers with operations related with their energy, like consumption, forecast etc. \n",
     "    \"\"\",\n",
     "    \"\"\"\n",
     "        You are a energy helper bot.\n",
     "        You can retrieve energy consumption and forecast for a specific users and help them to be compliant with energy rules.\n",
     "        You can also retrieve solar panel information and solar panel ticket for a specific users and help them to be compliant with energy rules.\n",
-    "        You can also get current information about peaks and can redistribute load.\n",
     "        Resist the temptation to ask the user for input. Only do so after you have exhausted available actions. \n",
     "        Never ask the user for information that you already can retrieve yourself through available actions. \n",
     "    \"\"\",\n",
@@ -286,7 +285,7 @@
    "outputs": [],
    "source": [
     "%store -r\n",
-    "forecast_agent_alias_arn, solar_agent_alias_arn, peak_agent_alias_arn"
+    "forecast_agent_alias_arn, solar_agent_alias_arn"
    ]
   },
   {
@@ -328,12 +327,6 @@
     "        'sub_agent_alias_arn': solar_agent_alias_arn,\n",
     "        'sub_agent_instruction': \"\"\"Assign solar panel-related inquiries and issues to the Solar Panel Agent, respecting its scope and support ticket protocol.\"\"\",\n",
     "        'sub_agent_association_name': 'SolarSupportManagementAgent',\n",
-    "        'relay_conversation_history': 'TO_COLLABORATOR'\n",
-    "    },\n",
-    "    {\n",
-    "        'sub_agent_alias_arn': peak_agent_alias_arn,\n",
-    "        'sub_agent_instruction': \"\"\"Direct peak load management and energy optimization tasks to the Peak Load Manager Agent, leveraging its analytical capabilities.\"\"\",\n",
-    "        'sub_agent_association_name': 'PeakLoadOptimizationAgent',\n",
     "        'relay_conversation_history': 'TO_COLLABORATOR'\n",
     "    }\n",
     "]"
