Removing peak consumption code

--- a/1-energy-forecast/1_forecasting_agent.ipynb
+++ b/1-energy-forecast/1_forecasting_agent.ipynb
@@ -48,39 +48,7 @@
     }
    },
    "source": [
-    "## Setup\n",
-    "\n",
-    "Firstly, you are going to install boto3 dependencies from pip. Make sure you have the latest version of it for full capabilities"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a2436bab",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "!pip uninstall boto3 botocore awscli --yes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1abeca2c-3181-42c3-adc5-70f993fc7ab0",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# Install latest dependencies\n",
-    "!python3 -m pip install --force-reinstall --no-cache -q -r ../requirements.txt"
+    "## Setup\n"
    ]
   },
   {
