--- a/2-solar-panel/2_solar_panel.ipynb
+++ b/2-solar-panel/2_solar_panel.ipynb
@@ -119,7 +119,7 @@
     "agent_foundation_model = [\n",
     "    'anthropic.claude-3-haiku-20240307-v1:0',\n",
     "    'anthropic.claude-3-sonnet-20240229-v1:0',\n",
-    "    'anthropic.claude-3-5-sonnet-20240620-v1:0'\n",
+    "   # 'anthropic.claude-3-5-sonnet-20240620-v1:0'\n",
     "]"
    ]
   },
