--- a/3-energy-agent-collaborator/3.1_energy_agent_collaborator.ipynb
+++ b/3-energy-agent-collaborator/3.1_energy_agent_collaborator.ipynb
@@ -117,7 +117,7 @@
     "agent_suffix = f\"{region}-{account_id_suffix}\"\n",
     "\n",
     "agent_foundation_model = [\n",
-    "    'anthropic.claude-3-5-sonnet-20240620-v1:0',\n",
+    "    #'anthropic.claude-3-5-sonnet-20240620-v1:0',\n",
     "    'anthropic.claude-3-sonnet-20240229-v1:0',\n",
     "    'anthropic.claude-3-haiku-20240307-v1:0'\n",
     "]"
