Removing peak consumption code

--- a/1-energy-forecast/1_forecasting_agent.ipynb
+++ b/1-energy-forecast/1_forecasting_agent.ipynb
@@ -65,6 +65,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee0d458e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python3 -m pip install --no-cache -q -r ../requirements.txt"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9cab0934-d025-47a2-a276-9d3fdb5a1d61",
    "metadata": {
@@ -118,16 +128,6 @@
    "outputs": [],
    "source": [
     "!pip freeze | grep boto3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60fe9264-44d4-4714-9dca-90f57b8e8f9a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python3 -m pip install --force-reinstall --no-cache -q -r ../requirements.txt\n"
    ]
   },
   {
